[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["zengxiaolou <44358506+zengxiaolou@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apscheduler = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
